ACLOCAL_AMFLAGS = -I m4
SUBDIRS = \
        external/lodepng/linux \
        external/tinyxml/linux \
        external/bullet/linux \
        external/box2d/Box2D/linux \
        external/chipmunk/linux \
        \
        linux \
        \
        viewer/linux \
        \
        winthequeen/linux \
        \
        utest/linux

EXTRA_DIST = autogen.sh

